Bug 1976727 - Update UX to align with Figma and sidebar. r=mtigley,dimi,fluent-reviewers,bolsson
Differential Revision: https://phabricator.services.mozilla.com/D258846

--- a/toolkit/components/satchel/megalist/content/components/login-line/login-line.css
+++ b/toolkit/components/satchel/megalist/content/components/login-line/login-line.css
@@ -8,9 +8,9 @@
   --inner-border-radius: calc(var(--outer-border-radius) - 2px);
   --alert-color: var(--icon-color-warning);
   --input-field-color: var(--link-color);
-  --input-field-color-hover: var(--button-text-color-hover);
-  --copy-tansition: opacity 250ms linear;
-  background-color: var(--background-color-box);
+  --input-field-color-hover: var(--button-text-color-ghost-hover);
+  --input-field-color-active: var(--button-text-color-ghost-active);
+  --copy-transition: opacity 250ms linear;
   color: inherit;
   padding: 3px;
 }
@@ -43,23 +43,23 @@
 :host(login-line:hover),
 :host(login-line:focus-visible) {
   > .line-container {
-    background-color: var(--button-background-color-hover);
+    background-color: var(--button-background-color-ghost-hover);
   }
 
   .input-field,
   .line-container {
     color: var(--input-field-color-hover);
   }
+}
 
-  .copy-container {
-    > .copy-icon {
-      fill: var(--input-field-color-hover);
-    }
+:host(login-line:active) {
+  > .line-container {
+    background-color: var(--button-background-color-ghost-active);
   }
 
-  .fav-icon,
-  .copy-icon {
-    fill: var(--input-field-color-hover);
+  .input-field,
+  .line-container {
+    color: var(--input-field-color-active);
   }
 }
 
@@ -80,7 +80,6 @@
     justify-content: end;
     align-items: center;
     height: var(--line-container-height);
-    background-color: var(--background-color-box);
     padding: 3px;
     --button-text-color-ghost: var(--icon-color);
 
@@ -102,7 +101,7 @@
 :host([linetype="username"]),
 :host([linetype="password"]) {
   > .line-container.copied {
-    background-color: var(--background-color-box);
+    background-color: transparent;
 
     .input-label::after {
       position: static;
@@ -136,7 +135,7 @@
       fill: var(--icon-color);
 
       @media not (prefers-reduced-motion) {
-        transition: var(--copy-tansition);
+        transition: var(--copy-transition);
       }
     }
 
@@ -146,12 +145,12 @@
       height: var(--icon-size-default);
       width: var(--icon-size-default);
       -moz-context-properties: fill;
-      fill: var(--icon-color-success);
+      fill: var(--attention-dot-color);
       opacity: 0;
       visibility: hidden;
 
       @media not (prefers-reduced-motion) {
-        transition: var(--copy-tansition);
+        transition: var(--copy-transition);
       }
     }
   }
@@ -185,7 +184,7 @@
     opacity: 0;
 
     @media not (prefers-reduced-motion) {
-      transition: var(--copy-tansition);
+      transition: var(--copy-transition);
     }
   }
 }
